Mar. 28: Continue to Information Acticity

--- a/app/src/main/res/layout/activity_take_picture_iii.xml
+++ b/app/src/main/res/layout/activity_take_picture_iii.xml
@@ -24,7 +24,7 @@
         android:textColor="@color/text"/>
 
     <Button
-        android:id="@+id/steps_button_start"
+        android:id="@+id/steps_button_continue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
