April 1: Information - learned how to use spinner TODO: add spinner behavior. refer to this website: https://developer.android.com/guide/topics/ui/controls/spinner.html

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="background">@color/colorBlueLight</color>
     <color name="background_button">@color/colorBlueDark</color>
     <color name="text">@color/colorWhite</color>
+    <color name="divider">@color/colorWhite</color>
+    <color name="background_edittext">@color/colorWhite</color>
 </resources>
