--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="medium">24sp</dimen>
     <dimen name="margin_title_detail">30dp</dimen>
     <dimen name="seperate_line">1dp</dimen>
+    <dimen name="between_section">10dp</dimen>
 </resources>
