--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,9 +16,9 @@
 
     <ScrollView
         android:id="@+id/information_scroll_view"
-        android:layout_below="@+id/information_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <LinearLayout
             android:id="@+id/information_linear_layout_major"
@@ -163,4 +163,15 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-</RelativeLayout>
+
+    <Button
+        android:id="@+id/information_button_continue"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/seperate_line"
+        android:gravity="center"
+        android:text="@string/button_continue"
+        android:textSize="@dimen/medium"
+        android:textColor="@color/text"
+        android:background="@color/background_button"/>
+</LinearLayout>
