Apr. 2: 1. Added "View Image" function 2. Implemented "InformationActivity" 3. Refactored some code into Utilities

--- a/app/src/main/res/layout/activity_information.xml
+++ b/app/src/main/res/layout/activity_information.xml
@@ -161,6 +161,263 @@
                     android:background="@color/background_edittext">
                 </Spinner>
             </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/information_linear_layout_your_information_car_type"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="@dimen/between_section">
+                <TextView
+                    android:id="@+id/information_textview_your_information_car_type"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:layout_height="match_parent"
+                    android:text="@string/information_textview_car_type"
+                    android:textColor="@color/text"
+                    android:textSize="@dimen/medium"/>
+
+                <Spinner
+                    android:id="@+id/information_spinner_your_information_car_type"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.6"
+                    android:layout_height="match_parent"
+                    android:background="@color/background_edittext">
+                </Spinner>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/information_linear_layout_your_information_insurance_company"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="@dimen/between_section">
+
+                <TextView
+                    android:id="@+id/information_textview_your_information_insurance_company"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:layout_height="match_parent"
+                    android:text="@string/information_textview_insurance_company"
+                    android:textColor="@color/text"
+                    android:textSize="@dimen/medium"/>
+
+                <EditText
+                    android:id="@+id/information_edittext_your_information_insurance_company"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.6"
+                    android:layout_height="match_parent"
+                    android:background="@color/background_edittext"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/information_linear_layout_your_information_phone_number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="@dimen/between_section">
+
+                <TextView
+                    android:id="@+id/information_textview_your_information_phone_number"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:layout_height="match_parent"
+                    android:text="@string/information_textview_phone_number"
+                    android:textColor="@color/text"
+                    android:textSize="@dimen/medium"/>
+
+                <EditText
+                    android:id="@+id/information_edittext_your_information_phone_number"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.6"
+                    android:layout_height="match_parent"
+                    android:background="@color/background_edittext"/>
+            </LinearLayout>
+
+            <!-- Opponent starts here -->
+            <TextView
+                android:id="@+id/information_subtitle_opponent_information"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/information_subtitle_opponent_information"
+                android:textSize="@dimen/medium"
+                android:textColor="@color/text"
+                android:gravity="center"
+                android:layout_marginBottom="@dimen/between_section"/>
+
+            <LinearLayout
+                android:id="@+id/information_linear_layout_opponent_information_driver_license"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/seperate_line"
+                android:orientation="horizontal"
+                android:layout_marginBottom="@dimen/between_section">
+
+                <Button
+                    android:id="@+id/information_button_opponent_information_driver_license"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:background="@color/background_button"
+                    android:text="@string/information_button_driver_license"
+                    android:textSize="@dimen/medium"
+                    android:textColor="@color/text"
+                    android:gravity="center_vertical"/>
+                <Button
+                    android:id="@+id/information_button_opponent_information_driver_license_take"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="@dimen/seperate_line"
+                    android:background="@color/background_button"
+                    android:text="@string/take_picture_text"
+                    android:textSize="@dimen/medium"
+                    android:textColor="@color/text"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/information_linear_layout_opponent_information_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="@dimen/between_section">
+
+                <TextView
+                    android:id="@+id/information_textview_opponent_information_name"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:layout_height="match_parent"
+                    android:text="@string/information_textview_name"
+                    android:textColor="@color/text"
+                    android:textSize="@dimen/medium"/>
+
+                <EditText
+                    android:id="@+id/information_edittext_opponent_information_name"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.6"
+                    android:layout_height="match_parent"
+                    android:background="@color/background_edittext"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/information_linear_layout_opponent_information_plate_number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="@dimen/between_section">
+
+                <TextView
+                    android:id="@+id/information_textview_opponent_information_plate_number"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:layout_height="match_parent"
+                    android:text="@string/information_textview_plate_number"
+                    android:textColor="@color/text"
+                    android:textSize="@dimen/medium"/>
+
+                <EditText
+                    android:id="@+id/information_edittext_opponent_information_plate_number"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.6"
+                    android:layout_height="match_parent"
+                    android:background="@color/background_edittext"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/information_linear_layout_opponent_information_plate_color"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="@dimen/between_section">
+
+                <TextView
+                    android:id="@+id/information_textview_opponent_information_plate_color"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:layout_height="match_parent"
+                    android:text="@string/information_textview_plate_color"
+                    android:textColor="@color/text"
+                    android:textSize="@dimen/medium"/>
+
+                <Spinner
+                    android:id="@+id/information_spinner_opponent_information_plate_color"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.6"
+                    android:layout_height="match_parent"
+                    android:background="@color/background_edittext">
+                </Spinner>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/information_linear_layout_opponent_information_car_type"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="@dimen/between_section">
+                <TextView
+                    android:id="@+id/information_textview_opponent_information_car_type"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:layout_height="match_parent"
+                    android:text="@string/information_textview_car_type"
+                    android:textColor="@color/text"
+                    android:textSize="@dimen/medium"/>
+
+                <Spinner
+                    android:id="@+id/information_spinner_opponent_information_car_type"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.6"
+                    android:layout_height="match_parent"
+                    android:background="@color/background_edittext">
+                </Spinner>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/information_linear_layout_opponent_information_insurance_company"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="@dimen/between_section">
+
+                <TextView
+                    android:id="@+id/information_textview_opponent_information_insurance_company"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:layout_height="match_parent"
+                    android:text="@string/information_textview_insurance_company"
+                    android:textColor="@color/text"
+                    android:textSize="@dimen/medium"/>
+
+                <EditText
+                    android:id="@+id/information_edittext_opponent_information_insurance_company"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.6"
+                    android:layout_height="match_parent"
+                    android:background="@color/background_edittext"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/information_linear_layout_opponent_information_phone_number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="@dimen/between_section">
+
+                <TextView
+                    android:id="@+id/information_textview_opponent_information_phone_number"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.4"
+                    android:layout_height="match_parent"
+                    android:text="@string/information_textview_phone_number"
+                    android:textColor="@color/text"
+                    android:textSize="@dimen/medium"/>
+
+                <EditText
+                    android:id="@+id/information_edittext_opponent_information_phone_number"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.6"
+                    android:layout_height="match_parent"
+                    android:background="@color/background_edittext"/>
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
